Added Piramidal Buildings.

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="City"
 main_scene="res://Main.scn"
 icon="icon.png"
 
+[display]
+
+fullscreen=true
+
 [input]
 
 ui_left=[key(Left), jbutton(0, 14), key(A)]
