--- a/engine.cfg
+++ b/engine.cfg
@@ -17,3 +17,7 @@ ui_right=[key(Right), jbutton(0, 15), key(D)]
 ui_up=[key(Up), jbutton(0, 12), key(W)]
 ui_down=[key(Down), jbutton(0, 13), key(S)]
 quit=[key(Q)]
+
+[render]
+
+shadows_enabled=true
