--- a/engine.cfg
+++ b/engine.cfg
@@ -17,6 +17,8 @@ ui_right=[key(Right), jbutton(0, 15), key(D)]
 ui_up=[key(Up), jbutton(0, 12), key(W)]
 ui_down=[key(Down), jbutton(0, 13), key(S)]
 quit=[key(Q)]
+sprint=[key(Shift)]
+slow=[key(Control)]
 
 [render]
 
